src/components/GameArea/GameArea.css
.Gameboards {
    background-color: red;
    height: 100%;
    width: 100%;
    padding: 50px 0;
    display: flex;
    justify-content: space-around;
}

.Gameboard {
    background-color: white;
    width: 400px;
    height: 400px;
    display: flex;
    flex-wrap: wrap;
}

.gamesquare {
    background-color: blue;
    width: 40px;
    height: 40px;
}

.highlight {
    opacity: 0.6;
}

.gamesquare-destroyer {
    background-color: coral;
}

.gamesquare-submarine {
    background-color: brown;
}

.gamesquare-cruiser {
    background-color: aqua;
}

.gamesquare-battleship {
    background-color: gray;
}

.gamesquare-carrier {
    background-color: greenyellow;
}

